fixing spacing

--- a/public/css/authors.css
+++ b/public/css/authors.css
@@ -102,6 +102,7 @@
 
 .social-links {
     display: flex;
+    margin-top: 10px;
     justify-content: center;
     gap: 10px;
 }
@@ -109,7 +110,7 @@
 .btn-social {
     background-color: #007BFF;
     color: white;
-    padding: 5px 10px;
+    padding: 10px 10px;
     border-radius: 5px;
     text-decoration: none;
     font-size: var(--font-size-sm);
